<resources>
    <string name="app_name">Cinemanager</string>
    <string name="bar_title_query_hint">请输入关键词</string>
    <string name="bar_title_menu_orders">&#160;&#160;&#160;我的订单&#160;&#160;&#160;&#160;</string>
    <string name="bar_title_menu_add_orders">&#160;&#160;&#160;添加订单&#160;&#160;&#160;&#160;</string>
    <string name="bar_title_menu_cinemas">&#160;&#160;&#160;影院列表&#160;&#160;&#160;&#160;</string>
    <string name="bar_title_menu_add_cinema">&#160;&#160;&#160;添加影院&#160;&#160;&#160;&#160;</string>
    <string name="bar_title_menu_exit">&#160;&#160;&#160;退出Exit&#160;&#160;&#160;&#160;&#160;</string>

</resources>
