<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bg_gray"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView android:id="@+id/bar_title_img_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/menu" />

        <TextView android:id="@+id/bar_title_tv_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            tools:text="我的订单" />
        <SearchView android:id="@+id/bar_title_search"
            android:queryHint="@string/bar_title_query_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>
    <LinearLayout android:id="@+id/bar_title_layout_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:visibility="gone"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        android:background="@color/bg_gray">

        <TextView android:id="@+id/bar_title_tv_view_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="5dp"
            android:text="@string/bar_title_menu_orders"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <TextView android:id="@+id/bar_title_tv_add_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="5dp"
            android:text="@string/bar_title_menu_add_orders"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView android:id="@+id/bar_title_tv_view_cinema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="5dp"
            android:text="@string/bar_title_menu_cinemas"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView android:id="@+id/bar_title_tv_add_cinema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="5dp"
            android:text="@string/bar_title_menu_add_cinema"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView android:id="@+id/bar_title_tv_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="5dp"
            android:text="@string/bar_title_menu_exit"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>

</LinearLayout>